# Crewai

./: README.md  last_post_result.json  pyproject.toml
src/red_note/: crew.py  main.py
src/red_note/config/: agents.txt  agents.yaml  tasks.txt  tasks.yaml
